new intro, new cv

--- a/index.html
+++ b/index.html
@@ -31,14 +31,13 @@
 <body>
 <div id="content" class="content">
 
-<div id="outline-container-org2111189" class="outline-2">
-<h2 id="org2111189">About</h2>
-<div class="outline-text-2" id="text-org2111189">
+<div id="outline-container-org9339982" class="outline-2">
+<h2 id="org9339982">About</h2>
+<div class="outline-text-2" id="text-org9339982">
 <p>
-I'm a PhD candidate at <a href="https://linguistics.mit.edu/">MIT Linguistics</a>, currently on my 6th year.  My
-research is focused on both semantics and syntax &#x2013; I am particularly
-interested in the meaning of questions and plurality as well as A-bar
-movement.
+I'm a lecturer at the <a href="https://www.ling.upenn.edu/">linguistics department at UPenn</a>.  My research is
+focused on both semantics and syntax &#x2013; I am particularly interested
+in the meaning of questions and plurality as well as A-bar.
 </p>
 
 <p>
