fixed typo index

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <p>
 I'm a lecturer at the <a href="https://www.ling.upenn.edu/">linguistics department at UPenn</a>.  My research is
 focused on both semantics and syntax &#x2013; I am particularly interested
-in the meaning of questions and plurality as well as A-bar.
+in the meaning of questions and plurality as well as A-bar movement.
 </p>
 
 <p>
