updated the website

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 <body>
 <div id="content" class="content">
 
-<div id="outline-container-org9339982" class="outline-2">
-<h2 id="org9339982">About</h2>
-<div class="outline-text-2" id="text-org9339982">
+<div id="outline-container-orgbf515bb" class="outline-2">
+<h2 id="orgbf515bb">About</h2>
+<div class="outline-text-2" id="text-orgbf515bb">
 <p>
 I'm a lecturer at the <a href="https://www.ling.upenn.edu/">linguistics department at UPenn</a>.  My research is
 focused on both semantics and syntax &#x2013; I am particularly interested
@@ -47,7 +47,7 @@ name. Unless we've met in high school, I go by my first first name,
 </p>
 
 <p>
-<b>Email</b>: filipek-at-mit.edu
+<b>Email</b>: filipehk-at-sas.upenn.edu
 </p>
 </div>
 </div>
