update presentations and new about me (new job)

--- a/cv.html
+++ b/cv.html
@@ -31,9 +31,9 @@
 <body>
 <div id="content" class="content">
 
-<div id="outline-container-orgcbd3ab6" class="outline-2">
-<h2 id="orgcbd3ab6">CV</h2>
-<div class="outline-text-2" id="text-orgcbd3ab6">
+<div id="outline-container-org0120ff4" class="outline-2">
+<h2 id="org0120ff4">CV</h2>
+<div class="outline-text-2" id="text-org0120ff4">
 <p>
 You can download my CV <a href="./kobayashi-cv.pdf">here</a>.
 </p>
