--- a/index.html
+++ b/index.html
@@ -31,14 +31,23 @@
 <body>
 <div id="content" class="content">
 
-<div id="outline-container-orgbf515bb" class="outline-2">
-<h2 id="orgbf515bb">About</h2>
-<div class="outline-text-2" id="text-orgbf515bb">
+<div id="outline-container-org8cca15c" class="outline-2">
+<h2 id="org8cca15c">About</h2>
+<div class="outline-text-2" id="text-org8cca15c">
 <p>
-I'm a lecturer at the <a href="https://www.ling.upenn.edu/">linguistics department at UPenn</a>.  My research is
-focused on both semantics and syntax &#x2013; I am particularly interested
-in the meaning of questions and plurality as well as A-bar movement.
+I'm a linguist whose work is mostly focused on semantics and its
+interface with syntax.  I'm interested in basically anything, but
+topics close to my heart are questions and plurality.  In my
+dissertation, I investigated the meaning of sentences in which DPs
+appear to be interpreted as quantifiers over intensional individuals,
+e.g., <i>Most governors have changed after the election</i>.
 </p>
+
+<p>
+I'm currently a post-doc at the Paris Lodron Universität Salzburg.  I
+got my PhD from MIT in August 2023.
+</p>
+
 
 <p>
 Concerning my name(s): <i>Hisao</i> is part of my first name, not of my last
@@ -47,7 +56,7 @@ name. Unless we've met in high school, I go by my first first name,
 </p>
 
 <p>
-<b>Email</b>: filipehk-at-sas.upenn.edu
+<b>Email</b>: filipe.kobayashi-at-plus.ac.at
 </p>
 </div>
 </div>
