--- a/presentations.html
+++ b/presentations.html
@@ -31,13 +31,64 @@
 <body>
 <div id="content" class="content">
 
-<div id="outline-container-orgabb13a6" class="outline-2">
-<h2 id="orgabb13a6">Selected Presentations</h2>
-<div class="outline-text-2" id="text-orgabb13a6">
+<div id="outline-container-org9346da7" class="outline-2">
+<h2 id="org9346da7">Selected Presentations</h2>
+<div class="outline-text-2" id="text-org9346da7">
 </div>
-<div id="outline-container-org9a5ecc9" class="outline-3">
-<h3 id="org9a5ecc9">2021</h3>
-<div class="outline-text-3" id="text-org9a5ecc9">
+<div id="outline-container-orgb8032ec" class="outline-3">
+<h3 id="orgb8032ec">2024</h3>
+<div class="outline-text-3" id="text-orgb8032ec">
+<ul class="org-ul">
+<li><p>
+Nominal free choice
+</p>
+
+<p>
+with Patrick D. Elliott
+</p>
+
+<p>
+<i>Talk at the MECORE Closing Workshop in Konstanz</i>
+</p></li>
+
+<li><p>
+<a href="https://saltconf.github.io/salt34/presentation-materials/kobayashi_quantification.pdf">Quantification uncovered: a reply to Aloni (2001)</a>
+</p>
+
+<p>
+with Enrico Flor
+</p>
+
+<p>
+<i>Poster at Semantics and Linguistic Theory 34</i>
+</p></li>
+</ul>
+</div>
+</div>
+
+
+<div id="outline-container-org0a9942d" class="outline-3">
+<h3 id="org0a9942d">2022</h3>
+<div class="outline-text-3" id="text-org0a9942d">
+<ul class="org-ul">
+<li><p>
+The logic of Hindi co-compounds
+</p>
+
+<p>
+with Ido Benbaji and Yash Sinha
+</p>
+
+<p>
+<i>Talk at Sinn und Bedeutung 27</i>
+</p></li>
+</ul>
+</div>
+</div>
+
+<div id="outline-container-org033d853" class="outline-3">
+<h3 id="org033d853">2021</h3>
+<div class="outline-text-3" id="text-org033d853">
 <ul class="org-ul">
 <li><p>
 <a href="https://osf.io/p5wnv/">Which singular wh-interrogatives admit plural answers in Brazilian Portuguese</a>
@@ -66,9 +117,9 @@ with Sherry Yong Chen
 </div>
 </div>
 
-<div id="outline-container-org8c3df4c" class="outline-3">
-<h3 id="org8c3df4c">2020</h3>
-<div class="outline-text-3" id="text-org8c3df4c">
+<div id="outline-container-org254c05f" class="outline-3">
+<h3 id="org254c05f">2020</h3>
+<div class="outline-text-3" id="text-org254c05f">
 <ul class="org-ul">
 <li><p>
 Two ways of building reciprocity: a study of Mandarin reciprocals
@@ -113,10 +164,9 @@ with Sherry Yong Chen
 </div>
 </div>
 
-
-<div id="outline-container-org57da621" class="outline-3">
-<h3 id="org57da621">2019</h3>
-<div class="outline-text-3" id="text-org57da621">
+<div id="outline-container-orgfa19c27" class="outline-3">
+<h3 id="orgfa19c27">2019</h3>
+<div class="outline-text-3" id="text-orgfa19c27">
 <ul class="org-ul">
 <li><p>
 Coordinating Complete Answers: The Case of Tanto-Quanto Conjunction
