--- a/papers.html
+++ b/papers.html
@@ -31,13 +31,13 @@
 <body>
 <div id="content" class="content">
 
-<div id="outline-container-orgd84d74c" class="outline-2">
-<h2 id="orgd84d74c">Papers</h2>
-<div class="outline-text-2" id="text-orgd84d74c">
+<div id="outline-container-org20f5db7" class="outline-2">
+<h2 id="org20f5db7">Papers</h2>
+<div class="outline-text-2" id="text-org20f5db7">
 </div>
-<div id="outline-container-org881fb1c" class="outline-3">
-<h3 id="org881fb1c">2022</h3>
-<div class="outline-text-3" id="text-org881fb1c">
+<div id="outline-container-org0a3a58e" class="outline-3">
+<h3 id="org0a3a58e">2022</h3>
+<div class="outline-text-3" id="text-org0a3a58e">
 <ul class="org-ul">
 <li><p>
 <a href="https://journals.linguisticsociety.org/proceedings/index.php/SALT/article/view/31.041">Lexically triggered uniquenes in wh-questions: An argument from
@@ -55,10 +55,9 @@ with Vincent Rouillard
 </div>
 </div>
 
-
-<div id="outline-container-org024924c" class="outline-3">
-<h3 id="org024924c">2021</h3>
-<div class="outline-text-3" id="text-org024924c">
+<div id="outline-container-org5c7649b" class="outline-3">
+<h3 id="org5c7649b">2021</h3>
+<div class="outline-text-3" id="text-org5c7649b">
 <ul class="org-ul">
 <li><p>
 Tracking down (c)overt movement with adverbial distributive numerals
@@ -104,9 +103,9 @@ with Vincent Rouillard
 </div>
 </div>
 
-<div id="outline-container-orgb1185b0" class="outline-3">
-<h3 id="orgb1185b0">2020</h3>
-<div class="outline-text-3" id="text-orgb1185b0">
+<div id="outline-container-org453fb94" class="outline-3">
+<h3 id="org453fb94">2020</h3>
+<div class="outline-text-3" id="text-org453fb94">
 <ul class="org-ul">
 <li><p>
 <a href="https://ling.auf.net/lingbuzz/004869">Tying Free Choice in Questions to Distributivity</a>
@@ -150,9 +149,9 @@ Martin Hackl
 </div>
 </div>
 
-<div id="outline-container-org0688798" class="outline-3">
-<h3 id="org0688798">2019</h3>
-<div class="outline-text-3" id="text-org0688798">
+<div id="outline-container-org7c4e0f1" class="outline-3">
+<h3 id="org7c4e0f1">2019</h3>
+<div class="outline-text-3" id="text-org7c4e0f1">
 <ul class="org-ul">
 <li><p>
 <a href="https://ling.auf.net/lingbuzz/004906">Coordinating Complete Answers: The Case of Tanto-Quanto Conjunction</a>
@@ -170,9 +169,19 @@ with Enrico Flor
 </div>
 </div>
 
-<div id="outline-container-org149a737" class="outline-2">
-<h2 id="org149a737">Manuscripts</h2>
-<div class="outline-text-2" id="text-org149a737">
+<div id="outline-container-org114865d" class="outline-2">
+<h2 id="org114865d">Dissertation</h2>
+<div class="outline-text-2" id="text-org114865d">
+<ul class="org-ul">
+<li><i>Quantifying over individual concepts</i>. (email me for a copy)</li>
+</ul>
+</div>
+</div>
+
+
+<div id="outline-container-orgfe80e63" class="outline-2">
+<h2 id="orgfe80e63">Manuscripts</h2>
+<div class="outline-text-2" id="text-orgfe80e63">
 <ul class="org-ul">
 <li><p>
 <a href="https://ling.auf.net/lingbuzz/005609">Proper Interleaving of A- &amp; A'-movement: a Brazilian Portuguese Case
